gitops/apps/test-nginx/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1

  template:
    spec:
      nodeSelector:
        homelab.okbear.dev/environment: prod

      tolerations:
        - key: homelab.okbear.dev/environment
          operator: Equal
          value: prod
          effect: NoSchedule

      containers:
        - name: nginx
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
