gitops/apps/test-nginx/overlays/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik
      sectionName: http

    - name: public-gateway
      namespace: traefik
      sectionName: https

  hostnames:
    - nginx.okbear.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: nginx
          port: 80
          weight: 1
